test: 에러 메시지 테스트 추가